--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tech.guyi.web.quick</groupId>
     <artifactId>quick-web-permission</artifactId>
-    <version>0.0.0.1-SNAPSHOT</version>
+    <version>0.0.0.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
